...
    ListEmptyComponent = () => {
        return (
            <View style={[styles.fullHeightWidth]} testID="list_empty_view">
                <Text style={[styles.GTEXT, styles.centerText]}>No List Data</Text>
                <Button
                    style={{ marginHorizontal: 10 }}
                    testID="list_empty_reload_click"
                    onPress={() => this.getPosts()}
                    color="#f47e47"
                    title="Load List"
                />
            </View>
        );
...
                <View testID="list_loading" style={[styles.BGOW, styles.container, styles.centerView]}>
                    <ActivityIndicator animating={true} size="large" color="#f47e47" />
                </View>
            );
        } else {
            return (
                <View testID="list_view" style={[styles.BGOW, styles.container]}>
                    <FlatList
                        data={data}
                        keyExtractor={(item) => item.id.toString()}
                        renderItem={this.renderListItem}
                        ListEmptyComponent={this.ListEmptyComponent}
                        refreshControl={
...
